--- a/src/components/Flight/Flight.module.scss
+++ b/src/components/Flight/Flight.module.scss
@@ -1,9 +1,83 @@
 @import "src/styles/index";
 
+
 .wrapper {
   display: grid;
+  justify-items: center;
   padding: 10px;
+  gap: 10px;
+
+  .route {
+    width: 100%;
+    text-align: center;
+    padding-bottom: 10px;
+    border-bottom: 1px solid $gray;
+  }
+
+  .travelTime {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(3, auto);
+
+    .time {
+      font-size: 18px;
+    }
+
+    .departureTime {
+      padding-left: 20px;
+      justify-self: start;
+    }
+
+    .flightTime {
+      justify-self: center;
+      height: 20px;
+      display: grid;
+      grid-template-columns: auto auto;
+      align-items: center;
+
+      .img {
+        height: 20px;
+        padding-right: 5px;
+      }
+    }
+
+    .arrivalTime {
+      padding-right: 20px;
+      justify-self: end;
+    }
+  }
+
+  .airline {
+    padding-left: 20px;
+    justify-self: start;
+  }
+
+  .blueText {
+    color: $blue;
+  }
+
+  .line {
+    width: 90%;
+    border-bottom: 1px solid $gray;
+    display: grid;
+    justify-items: center;
+    height: 2px;
+
+    .transfer {
+      width: max-content;
+      position: relative;
+      padding: 0 10px;
+      color: $orange;
+      height: 20px;
+      top: -8px
+    }
+
+    .bgWhite {
+      background: $white;
+    }
+  }
 }
+
 
 .wrapperBottomBorder {
   border-bottom: 2px solid $blue;
